[package]
name = "memsther"
version = "0.0.1"
edition = "2021"

[dependencies]
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
deadpool-postgres =  "0.9.0"
tokio-postgres = "0.7.7"
tokio = "1.0"
refinery = {version = "0.8.7", features = ["tokio-postgres"] }
env_logger = "0.10.0"
log = "0.4.0"
reqwest = "0.11.14"
regex = "1.7.1"
serde_json = "1.0.93"
rand = "0.8.5"
openssl = { version = "0.10.35", features = ["vendored"] }

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]
version = "0.11.5"
